force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__KawaseSel__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KawaseSel__c</fullName>
    <inlineHelpText>Selling Ex-rate for Invoicing. If Default Invoice Issued Date(Default ‘Today’) is in the period of active EX-Rate Mgmt record, ex-rate is automatically synchronized. Default Invoice Issued Date can be updated from Fixed Invoice Issue Date(If Fixed).</inlineHelpText>
    <label>EXCHANGE RATE-SELLING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>