force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__MASTER_B_L__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MASTER_B_L__c</fullName>
    <formula>clofor_com_cfs__Anken__r.clofor_com_cfs__MBL_Number_SEA_AIR__c</formula>
    <label>MASTER B/L</label>
    <type>Text</type>
</CustomField>