force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Nyukingaku__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Nyukingaku__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>When this field is &apos;0&apos; and  &apos;Payment Confirmed-Selling&apos; is checked, Amount Selling Including Tax(Local) is inserted to this field</inlineHelpText>
    <label>AMOUNT PAID-SELLING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>