force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__NyukinKakuninzumi__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NyukinKakuninzumi__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only use when Full Amount is Paid. Box is checked, below updates processed 1.Amount Paid-Selling(Local):Syn with Amount Selling including Tax(Local) 2.Amount Paid-Selling(USD):Syn with Amount Selling including Tax(USD) 3.Unpaid Balance of Selling:&apos;0&apos;</inlineHelpText>
    <label>PAYMENT CONFIRMED-SELLING</label>
    <type>Checkbox</type>
</CustomField>