force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PartnerCreditJPN__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PartnerCreditJPN__c</fullName>
    <formula>clofor_com_cfs__BuyAmountJPN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreditJPN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>