force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PartnerDebit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PartnerDebit__c</fullName>
    <formula>IF ( CONTAINS(TEXT(clofor_com_cfs__Seikyusaki__r.clofor_com_cfs__Business_Relationship__c), &apos;Partner&apos;),clofor_com_cfs__SellAmountUSD__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>