force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PartnerSeisan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PartnerSeisan__c</fullName>
    <formula>IF ( CONTAINS(TEXT(clofor_com_cfs__Seikyusaki__r.clofor_com_cfs__Business_Relationship__c), &apos;Partner&apos;),
	clofor_com_cfs__Seikyusaki__r.Name,
	IF (CONTAINS(TEXT(clofor_com_cfs__PaymentTo__r.clofor_com_cfs__Business_Relationship__c), &apos;Partner&apos;), 
		clofor_com_cfs__PaymentTo__r.Name , 
		&apos;国内請求先&apos;
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>請求先と支払先の「種別」を見て、海外パートナーの取引先名を表示しています。
どちらも国内の場合は「国内」が表示されます。</inlineHelpText>
    <label>PARTNER INVOLVEMENT(INVOICE/PAYMENT TO)</label>
    <type>Text</type>
</CustomField>