force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PartnerSeisanUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PartnerSeisanUSD__c</fullName>
    <formula>IF ( AND(CONTAINS(TEXT(clofor_com_cfs__Seikyusaki__r.clofor_com_cfs__Business_Relationship__c), &apos;Partner&apos;), CONTAINS(TEXT(clofor_com_cfs__PaymentTo__r.clofor_com_cfs__Business_Relationship__c), &apos;Partner&apos;)), clofor_com_cfs__SellAmountUSD__c - clofor_com_cfs__BuyAmountUSD__c, IF ( CONTAINS(TEXT(clofor_com_cfs__Seikyusaki__r.clofor_com_cfs__Business_Relationship__c), &apos;Partner&apos;), clofor_com_cfs__SellAmountUSD__c, IF (CONTAINS(TEXT(clofor_com_cfs__PaymentTo__r.clofor_com_cfs__Business_Relationship__c), &apos;Partner&apos;), -1 * clofor_com_cfs__BuyAmountUSD__c, 10 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>請求先と支払先の「種別」を見て、海外パートナーとのバランスの金額(USD)を表示します。
どちらも国内の場合は0で表示されます。</inlineHelpText>
    <label>BALANCE(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>