force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PayDueDateAutoSetting__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayDueDateAutoSetting__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Payment Due Date will be automatically set based on will be automatically set based on Payment Base Date and Payment Condition from Base Date of Payment To</inlineHelpText>
    <label>Payment Due Date Auto Setting</label>
    <type>Checkbox</type>
</CustomField>