force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Payment_to_Short_name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Payment_to_Short_name__c</fullName>
    <label>Payment to (Short name)-Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>