force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentDate__c</fullName>
    <inlineHelpText>Enter the actual payment settlement date in the bank account.</inlineHelpText>
    <label>PAYMENT SETTLED DATE-BUYING</label>
    <type>Date</type>
</CustomField>