force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PaymentTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentTo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>To search available Bank Account list, please tab the mouse point on top of the company name in Payment to</inlineHelpText>
    <label>PAYMENT TO-BUYING</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>CustomerB2B</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>F/TMS Bill (PAYMENT TO-BUYING)</relationshipLabel>
    <relationshipName>PaymentTo</relationshipName>
    <type>Lookup</type>
</CustomField>