force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PaymentToRelationshipType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentToRelationshipType__c</fullName>
    <inlineHelpText>If Master Carrier/Consolidator selected, the company in Carrier/Consolidator will be set in Payment to.
If Partner selected, the company in Partner in S/O will be set.
If Deliver Agent selected, the company in Delivery Agent in S/O will be set.</inlineHelpText>
    <label>Payment to Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PaymentToRelationshipType</valueSetName>
    </valueSet>
</CustomField>