force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PaymenttoShortname__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymenttoShortname__c</fullName>
    <formula>clofor_com_cfs__PaymentTo__r.clofor_com_cfs__CompanyShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment to (Short name)</label>
    <type>Text</type>
</CustomField>