force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__PricingRecordType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PricingRecordType__c</fullName>
    <formula>clofor_com_cfs__Tariff__r.RecordType.Name</formula>
    <label>PRICING RECORD TYPE</label>
    <type>Text</type>
</CustomField>