force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ProfitIncludeTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitIncludeTaxLocal__c</fullName>
    <formula>ROUND(clofor_com_cfs__SellInTaxAmountJPY__c,0) - ROUND(clofor_com_cfs__BuyInTaxAmountJPY__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit Include Tax(Local)=Amount Selling including Tax(Local)-Amount Buying including Tax(Local)</inlineHelpText>
    <label>PROFIT INCLUDE TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>