force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ProfitIncludeTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitIncludeTaxUSD__c</fullName>
    <formula>ROUND(clofor_com_cfs__SellInTaxAmount_USD__c,3) - ROUND(clofor_com_cfs__BuyInTaxAmountUSD__c,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit Include Tax(USD)=Amount Selling including Tax(USD)-Amount Buying including Tax(USD)</inlineHelpText>
    <label>PROFIT INCLUDE TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>