force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ProfitRatioIncludeTax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitRatioIncludeTax__c</fullName>
    <formula>IF (clofor_com_cfs__SellInTaxAmountJPY__c  = null || clofor_com_cfs__SellInTaxAmountJPY__c  = 0, 0, ( clofor_com_cfs__SellInTaxAmountJPY__c  -  clofor_com_cfs__BuyInTaxAmountJPY__c) / clofor_com_cfs__SellInTaxAmountJPY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit Ratio Include Tax=(\R\Nprofit Include Tax(USD)=Amount Selling including Tax(USD)-Amount Buying including Tax(USD))/Amount Selling including Tax(USD)</inlineHelpText>
    <label>PROFIT RATIO INCLUDE TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>