force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ProfitRatioUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitRatioUSD__c</fullName>
    <formula>IF (clofor_com_cfs__SellAmountUSD__c = null || clofor_com_cfs__SellAmountUSD__c = 0, 0, ( clofor_com_cfs__SellAmountUSD__c - clofor_com_cfs__BuyAmountUSD__c ) / clofor_com_cfs__SellAmountUSD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Ratio (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>