force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ReceiptanceDate_del__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceiptanceDate_del__c</fullName>
    <inlineHelpText>Enter the actual receipt settlement date in the bank account.</inlineHelpText>
    <label>PAYMENT SETTLED DATE-SELLING</label>
    <type>Date</type>
</CustomField>