force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Recordtype__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Recordtype__c</fullName>
    <formula>clofor_com_cfs__Anken__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RECORD TYPE</label>
    <type>Text</type>
</CustomField>