force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Reference_Price__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Reference_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Price</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__Tariff__c</field>
            <operation>equals</operation>
            <valueField>clofor_com_cfs__ReferencePrice__c.clofor_com_cfs__Servicename__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__ReferencePrice__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>F_TMS_BILL</relationshipName>
    <type>Lookup</type>
</CustomField>