force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SalesAccountedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SalesAccountedDate__c</fullName>
    <formula>clofor_com_cfs__Anken__r.clofor_com_cfs__SalesAccountedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Accounted Date(will be deleted)</label>
    <type>Date</type>
</CustomField>