force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SalesAccountedDateInvoicing__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SalesAccountedDateInvoicing__c</fullName>
    <label>SALES ACCOUNTED DATE-INVOICING</label>
    <type>Date</type>
</CustomField>