force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Seikyusaki__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Seikyusaki__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>INVOICE TO</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CustomerB2B</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>F/TMS BILL (INVOICE TO)</relationshipLabel>
    <relationshipName>Seikyusakis</relationshipName>
    <type>Lookup</type>
</CustomField>