force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SeikyusakiTantosya__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SeikyusakiTantosya__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC OF INVOICE TO</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__Seikyusaki__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SeikyusakiTantosyas</relationshipName>
    <type>Lookup</type>
</CustomField>