force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SellACSetProcess__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellACSetProcess__c</fullName>
    <label>Selling AC Setting Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__SellACSetProcess</valueSetName>
    </valueSet>
</CustomField>