force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SellAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellAmountUSD__c</fullName>
    <formula>ROUND(clofor_com_cfs__Suryo__c * clofor_com_cfs__SellTankaUSD__c,3)+ clofor_com_cfs__TotalAmountofSellingFCYAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Selling(USD)=Unit Price Of selling(Local)*Charge Unit (Total).</inlineHelpText>
    <label>TOTAL AMOUNT OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>