force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SellDetail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellDetail__c</fullName>
    <label>PAYMENT NOTES-SELLING</label>
    <type>TextArea</type>
</CustomField>