force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SellDifferentiation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellDifferentiation__c</fullName>
    <formula>clofor_com_cfs__SellInTaxAmountJPY__c - clofor_com_cfs__Nyukingaku__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Balance of Selling(Local)=Amount Selling including Tax(Local)-Amount Paid-Selling(Local)</inlineHelpText>
    <label>UNPAID BALANCE OF SELLING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>