force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Selling_credit_tax_type_accounting__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Selling_credit_tax_type_accounting__c</fullName>
    <label>SELLING-TAX CATEGORY FOR THE CREDIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>課税売上込8%</fullName>
                <label>SALES INCLUDED TAX(8%)</label>
            </value>
            <value>
                <fullName>輸出売上</fullName>
                <label>EXPORT SALES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>