force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__selling_debit_category_accouting__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__selling_debit_category_accouting__c</fullName>
    <label>SELLING-THE DEBIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>売掛</fullName>
                <label>ACCOUNTS RECEIVABLE</label>
            </value>
            <value>
                <fullName>普通預金</fullName>
                <label>ORDINARY ACCOUNT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>