force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Selling_debit_tax_type_accounting__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Selling_debit_tax_type_accounting__c</fullName>
    <label>SELLING-TAX CATEGORY FOR THE DEBIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>対象外</fullName>
                <label>OUT OF SCOPE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>