force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SellingCreditAccoutingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellingCreditAccoutingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>SELLING_CREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>