force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SellInTaxAmountJPY_NoRound__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellInTaxAmountJPY_NoRound__c</fullName>
    <formula>clofor_com_cfs__SellAmountJPN__c  *  (1 + clofor_com_cfs__TaxInitial__c)+clofor_com_cfs__TAX_ADJUSTMENTSELL__c+clofor_com_cfs__AmountSellingLocalAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Incl Tax (Local, no round)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>