force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SellTaxNum_USD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellTaxNum_USD__c</fullName>
    <formula>ROUND(clofor_com_cfs__SellAmountUSD__c * clofor_com_cfs__TaxInitial__c,3)+clofor_com_cfs__USDTaxAdjustmentSell__c
/*
ROUND(clofor_com_cfs__SellAmountUSD__c * clofor_com_cfs__TaxInitial__c,2)+clofor_com_cfs__USDTaxAdjustmentSell__c
*/


/*
IF (clofor_com_cfs__Tariff__r.clofor_com_cfs__wkTaxFlag__c,
clofor_com_cfs__SellAmountUSD__c * clofor_com_cfs__TaxInitial__c+clofor_com_cfs__TAX_ADJUSTMENTSELL__c,
0
)
*/


/*
IF (clofor_com_cfs__Tariff__r.clofor_com_cfs__wkTaxFlag__c,
FLOOR(clofor_com_cfs__SellAmountUSD__c * clofor_com_cfs__TaxInitial__c+clofor_com_cfs__TAX_ADJUSTMENTSELL__c),
0
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT OF TAX-SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>